# zcash-browser-wallet

./: .gitignore  README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/extension/: index.html  manifest.json
frontend/extension/assets/: index-BbzHM1om.css  index-C0Yj2Fos.js  index-DkefFRs1.js  wasm_bg-BBied9bY.wasm  wasm_bg-D_at7Yx5.wasm
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Modal.tsx
wallet-core/: Cargo.toml  check_output.txt
wallet-core/src/: export_mina.rs  keys.rs  lib.rs  merkle.rs  notes.rs  rpc.rs  sync.rs  tx.rs  witness.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
